VoxScript/.antlr/VoxScriptParser.java
// Generated from c:/Users/Timothy/RiderProjects/VoxScript/VoxScript/VoxScript.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class VoxScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, VAR=9, 
		FUNC=10, FOR=11, FOREACH=12, WHILE=13, IN=14, CONTINUE=15, BREAK=16, IF=17, 
		ELSE=18, NUMBER=19, STRING=20, BOOLEAN=21, NULL=22, TUPLE=23, TRUE=24, 
		FALSE=25, ID=26, SEMICOLON=27, COLON=28, EXCLAMATION=29, QUOTATION=30, 
		LEFT_PAREN=31, RIGHT_PAREN=32, LEFT_BRACE=33, RIGHT_BRACE=34, LEFT_CURLY=35, 
		RIGHT_CURLY=36, UNARY=37, MUL_DIV=38, ADD_SUB=39, COMPARE=40, ASSIGNMENT=41, 
		WS=42, LINE_COMMENT=43, MULTILINE_COMMENT=44, INCREMENT=45, DECREMENT=46, 
		ADD_DIRECT=47, SUB_DIRECT=48, MULT_DIRECT=49, DIV_DIRECT=50, EXPO_DIRECT=51, 
		MOD_DIRECT=52, COND_EQUAL=53, COND_NOTEQUAL=54, COND_GREATERTHAN=55, COND_LESSTHAN=56, 
		COND_GREATEROREQUAL=57, COND_LESSOREQUAL=58, COND_AND=59, COND_OR=60;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_statement = 2, RULE_print = 3, 
		RULE_var_define = 4, RULE_val_assign = 5, RULE_arith_assign = 6, RULE_val_increment = 7, 
		RULE_func_define = 8, RULE_func_call = 9, RULE_cont_while = 10, RULE_cont_for = 11, 
		RULE_cont_foreach = 12, RULE_cont_return = 13, RULE_cont_continue = 14, 
		RULE_cont_break = 15, RULE_cont_if = 16, RULE_cont_else = 17, RULE_type_annotation = 18, 
		RULE_expression = 19, RULE_table_definition = 20, RULE_table_member_dict = 21, 
		RULE_table_member_list = 22, RULE_table_member = 23, RULE_table_key = 24, 
		RULE_lambda = 25, RULE_identifier = 26, RULE_postfix = 27, RULE_id_postfix = 28, 
		RULE_expression_postfix = 29, RULE_function_postfix = 30, RULE_function_params = 31, 
		RULE_var_inst = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "statement", "print", "var_define", "val_assign", 
			"arith_assign", "val_increment", "func_define", "func_call", "cont_while", 
			"cont_for", "cont_foreach", "cont_return", "cont_continue", "cont_break", 
			"cont_if", "cont_else", "type_annotation", "expression", "table_definition", 
			"table_member_dict", "table_member_list", "table_member", "table_key", 
			"lambda", "identifier", "postfix", "id_postfix", "expression_postfix", 
			"function_postfix", "function_params", "var_inst"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'print'", "'='", "','", "'return'", "'^'", "'?'", "'->'", "'.'", 
			"'var'", "'func'", "'for'", "'foreach'", "'while'", "'in'", "'continue'", 
			"'break'", "'if'", "'else'", null, null, null, "'null'", "'...'", "'true'", 
			"'false'", null, "';'", "':'", "'!'", "'\"'", "'('", "')'", "'['", "']'", 
			"'{'", "'}'", null, null, null, null, null, null, null, null, "'++'", 
			"'--'", "'+='", "'-='", "'*='", "'/='", "'^='", "'%='", "'=='", "'!='", 
			"'>'", "'<'", "'>='", "'<='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "VAR", "FUNC", 
			"FOR", "FOREACH", "WHILE", "IN", "CONTINUE", "BREAK", "IF", "ELSE", "NUMBER", 
			"STRING", "BOOLEAN", "NULL", "TUPLE", "TRUE", "FALSE", "ID", "SEMICOLON", 
			"COLON", "EXCLAMATION", "QUOTATION", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACE", 
			"RIGHT_BRACE", "LEFT_CURLY", "RIGHT_CURLY", "UNARY", "MUL_DIV", "ADD_SUB", 
			"COMPARE", "ASSIGNMENT", "WS", "LINE_COMMENT", "MULTILINE_COMMENT", "INCREMENT", 
			"DECREMENT", "ADD_DIRECT", "SUB_DIRECT", "MULT_DIRECT", "DIV_DIRECT", 
			"EXPO_DIRECT", "MOD_DIRECT", "COND_EQUAL", "COND_NOTEQUAL", "COND_GREATERTHAN", 
			"COND_LESSTHAN", "COND_GREATEROREQUAL", "COND_LESSOREQUAL", "COND_AND", 
			"COND_OR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "VoxScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VoxScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(VoxScriptParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(VoxScriptParser.SEMICOLON, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 67354130L) != 0)) {
				{
				{
				setState(68);
				statement();
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(69);
					match(SEMICOLON);
					}
				}

				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Var_defineContext var_define() {
			return getRuleContext(Var_defineContext.class,0);
		}
		public Val_assignContext val_assign() {
			return getRuleContext(Val_assignContext.class,0);
		}
		public Arith_assignContext arith_assign() {
			return getRuleContext(Arith_assignContext.class,0);
		}
		public Val_incrementContext val_increment() {
			return getRuleContext(Val_incrementContext.class,0);
		}
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public Func_defineContext func_define() {
			return getRuleContext(Func_defineContext.class,0);
		}
		public Cont_returnContext cont_return() {
			return getRuleContext(Cont_returnContext.class,0);
		}
		public Cont_continueContext cont_continue() {
			return getRuleContext(Cont_continueContext.class,0);
		}
		public Cont_breakContext cont_break() {
			return getRuleContext(Cont_breakContext.class,0);
		}
		public Cont_whileContext cont_while() {
			return getRuleContext(Cont_whileContext.class,0);
		}
		public Cont_forContext cont_for() {
			return getRuleContext(Cont_forContext.class,0);
		}
		public Cont_foreachContext cont_foreach() {
			return getRuleContext(Cont_foreachContext.class,0);
		}
		public Cont_ifContext cont_if() {
			return getRuleContext(Cont_ifContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				var_define();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				val_assign();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				arith_assign();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				val_increment();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(81);
				func_call();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				func_define();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(83);
				cont_return();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(84);
				cont_continue();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(85);
				cont_break();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(86);
				cont_while();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(87);
				cont_for();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(88);
				cont_foreach();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(89);
				cont_if();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(90);
				print();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).exitPrint(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__0);
			setState(94);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_defineContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(VoxScriptParser.VAR, 0); }
		public Var_instContext var_inst() {
			return getRuleContext(Var_instContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Var_defineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_define; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).enterVar_define(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).exitVar_define(this);
		}
	}

	public final Var_defineContext var_define() throws RecognitionException {
		Var_defineContext _localctx = new Var_defineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var_define);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(VAR);
			setState(97);
			var_inst();
			setState(98);
			match(T__1);
			setState(99);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Val_assignContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Val_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_val_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).enterVal_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).exitVal_assign(this);
		}
	}

	public final Val_assignContext val_assign() throws RecognitionException {
		Val_assignContext _localctx = new Val_assignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_val_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			identifier();
			setState(102);
			match(T__1);
			setState(103);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Arith_assignContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode ASSIGNMENT() { return getToken(VoxScriptParser.ASSIGNMENT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Arith_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arith_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).enterArith_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).exitArith_assign(this);
		}
	}

	public final Arith_assignContext arith_assign() throws RecognitionException {
		Arith_assignContext _localctx = new Arith_assignContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arith_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			identifier();
			setState(106);
			match(ASSIGNMENT);
			setState(107);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Val_incrementContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode INCREMENT() { return getToken(VoxScriptParser.INCREMENT, 0); }
		public TerminalNode DECREMENT() { return getToken(VoxScriptParser.DECREMENT, 0); }
		public Val_incrementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_val_increment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).enterVal_increment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).exitVal_increment(this);
		}
	}

	public final Val_incrementContext val_increment() throws RecognitionException {
		Val_incrementContext _localctx = new Val_incrementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_val_increment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			identifier();
			setState(110);
			_la = _input.LA(1);
			if ( !(_la==INCREMENT || _la==DECREMENT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_defineContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(VoxScriptParser.FUNC, 0); }
		public TerminalNode ID() { return getToken(VoxScriptParser.ID, 0); }
		public Function_paramsContext function_params() {
			return getRuleContext(Function_paramsContext.class,0);
		}
		public TerminalNode LEFT_CURLY() { return getToken(VoxScriptParser.LEFT_CURLY, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode RIGHT_CURLY() { return getToken(VoxScriptParser.RIGHT_CURLY, 0); }
		public Type_annotationContext type_annotation() {
			return getRuleContext(Type_annotationContext.class,0);
		}
		public Func_defineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_define; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).enterFunc_define(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).exitFunc_define(this);
		}
	}

	public final Func_defineContext func_define() throws RecognitionException {
		Func_defineContext _localctx = new Func_defineContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_func_define);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(FUNC);
			setState(113);
			match(ID);
			setState(114);
			function_params();
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(115);
				type_annotation();
				}
			}

			setState(118);
			match(LEFT_CURLY);
			setState(119);
			block();
			setState(120);
			match(RIGHT_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_callContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Function_postfixContext function_postfix() {
			return getRuleContext(Function_postfixContext.class,0);
		}
		public Func_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).enterFunc_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).exitFunc_call(this);
		}
	}

	public final Func_callContext func_call() throws RecognitionException {
		Func_callContext _localctx = new Func_callContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_func_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			identifier();
			setState(123);
			function_postfix();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cont_whileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(VoxScriptParser.WHILE, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(VoxScriptParser.LEFT_PAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(VoxScriptParser.RIGHT_PAREN, 0); }
		public TerminalNode LEFT_CURLY() { return getToken(VoxScriptParser.LEFT_CURLY, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode RIGHT_CURLY() { return getToken(VoxScriptParser.RIGHT_CURLY, 0); }
		public Cont_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cont_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).enterCont_while(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).exitCont_while(this);
		}
	}

	public final Cont_whileContext cont_while() throws RecognitionException {
		Cont_whileContext _localctx = new Cont_whileContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cont_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(WHILE);
			setState(126);
			match(LEFT_PAREN);
			setState(127);
			expression(0);
			setState(128);
			match(RIGHT_PAREN);
			setState(129);
			match(LEFT_CURLY);
			setState(130);
			block();
			setState(131);
			match(RIGHT_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cont_forContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(VoxScriptParser.FOR, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(VoxScriptParser.LEFT_PAREN, 0); }
		public TerminalNode ID() { return getToken(VoxScriptParser.ID, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(VoxScriptParser.RIGHT_PAREN, 0); }
		public TerminalNode LEFT_CURLY() { return getToken(VoxScriptParser.LEFT_CURLY, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode RIGHT_CURLY() { return getToken(VoxScriptParser.RIGHT_CURLY, 0); }
		public Cont_forContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cont_for; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).enterCont_for(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VoxScriptListener ) ((VoxScriptListener)listener).exitCont_for(this);
		}
	}
